--- a/components/mk5vjmy9b-python/overlays/development/deployment-patch.yaml
+++ b/components/mk5vjmy9b-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: mk5vjmy9b-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-1abd89521d.medy.p3.openshiftapps.com/rhtap/rhtap-qe:3b6384aa2138970a68d9e955e00d1cdb7d800ac6@sha256:89586ced712c0722a65771bb39f5b6a4f5ee31a81aeb4c3ac7410bb16a0989d1
+          name: container-image
